Force libcvar to build as a shared library so the global instance of the Trie is guaranteed to be unique -- which is not the case with static libraries.

--- a/CVars/CMakeLists.txt
+++ b/CVars/CMakeLists.txt
@@ -29,9 +29,9 @@ SET( HDRS
 
 ADD_DEFINITIONS( -DTIXML_USE_STL )
 
-ADD_LIBRARY( cvars ${SRCS} ${HDRS} )
+ADD_LIBRARY( cvars SHARED ${SRCS} ${HDRS} )
 
-INSTALL( TARGETS cvars ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib )
+INSTALL( TARGETS cvars LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib )
 INSTALL( FILES ${HDRS} DESTINATION ${CMAKE_INSTALL_PREFIX}/include/CVars )
 
 
