--- a/CVars/CMakeLists.txt
+++ b/CVars/CMakeLists.txt
@@ -31,7 +31,9 @@ ADD_DEFINITIONS( -DTIXML_USE_STL )
 
 ADD_LIBRARY( cvars SHARED ${SRCS} ${HDRS} )
 
-INSTALL( TARGETS cvars LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib )
+INSTALL( TARGETS cvars
+         EXPORT CVarsTargets
+         LIBRARY DESTINATION lib )
 INSTALL( FILES ${HDRS} DESTINATION ${CMAKE_INSTALL_PREFIX}/include/CVars )
 
 
