Added cmake version file allowing version checks. Additionally supports android / desktop platform check.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,11 @@
-
+cmake_minimum_required( VERSION 2.8 )
 PROJECT( CVars )
 
 # Be sure to change these with each update
-SET( MAJOR_VERSION 2 )
-SET( MINOR_VERSION 3 )
-SET( PATCH_VERSION 0 )
-
-cmake_minimum_required( VERSION 2.8 )
+SET( VERSION_MAJOR 2 )
+SET( VERSION_MINOR 3 )
+SET( VERSION_PATCH 0 )
+SET( VERSION ${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH} )
 
 SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIC")
 SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC")
@@ -74,5 +73,10 @@ SET( CONF_INCLUDE_DIR "\${CVARS_CMAKE_DIR}/${REL_INCLUDE_DIR}" )
 CONFIGURE_FILE( ${CMAKE_CURRENT_SOURCE_DIR}/CVARSConfig.cmake.in
     ${CMAKE_CURRENT_BINARY_DIR}${CMAKE_FILES_DIRECTORY}/CVARSConfig.cmake @ONLY )
 
+# Version information
+configure_file( ${CMAKE_CURRENT_SOURCE_DIR}/CVARSConfigVersion.cmake.in
+  "${CMAKE_CURRENT_BINARY_DIR}/CVARSConfigVersion.cmake" @ONLY)
+
 INSTALL(FILES "${CMAKE_CURRENT_BINARY_DIR}${CMAKE_FILES_DIRECTORY}/CVARSConfig.cmake"
+              "${CMAKE_CURRENT_BINARY_DIR}/CVARSConfigVersion.cmake"
         DESTINATION ${CMAKECONFIG_INSTALL_DIR} )
