--- a/CVars/CVarVersion.h.in
+++ b/CVars/CVarVersion.h.in
@@ -1,8 +1,8 @@
 #ifndef _CVARS_CONFIG_H_
 #define _CVARS_CONFIG_H_
 
-#define CVARS_MAJOR_REV   @MAJOR_VERSION@
-#define CVARS_MINOR_REV   @MINOR_VERSION@
-#define CVARS_PATCH_REV   @PATCH_VERSION@
+#define CVARS_MAJOR_REV   @VERSION_MAJOR@
+#define CVARS_MINOR_REV   @VERSION_MINOR@
+#define CVARS_PATCH_REV   @VERSION_PATCH@
 
 #endif
