Removes requirement that library is shared.

--- a/CVars/CMakeLists.txt
+++ b/CVars/CMakeLists.txt
@@ -29,11 +29,12 @@ SET( HDRS
 
 ADD_DEFINITIONS( -DTIXML_USE_STL )
 
-ADD_LIBRARY( cvars SHARED ${SRCS} ${HDRS} )
+ADD_LIBRARY( cvars ${SRCS} ${HDRS} )
 
 INSTALL( TARGETS cvars
          EXPORT CVarsTargets
-         LIBRARY DESTINATION lib )
+	 ARCHIVE DESTINATION lib
+	 LIBRARY DESTINATION lib )
 INSTALL( FILES ${HDRS} DESTINATION ${CMAKE_INSTALL_PREFIX}/include/CVars )
 
 
