--- a/CVars/CMakeLists.txt
+++ b/CVars/CMakeLists.txt
@@ -32,7 +32,7 @@ ADD_DEFINITIONS( -DTIXML_USE_STL )
 ADD_LIBRARY( cvars ${SRCS} ${HDRS} )
 
 INSTALL( TARGETS cvars
-         EXPORT CVarsTargets
+         EXPORT "${PROJECT_NAME}Targets"
 	 ARCHIVE DESTINATION lib
 	 LIBRARY DESTINATION lib )
 INSTALL( FILES ${HDRS} DESTINATION ${CMAKE_INSTALL_PREFIX}/include/CVars )
