--- a/CVARSConfig.cmake.in
+++ b/CVARSConfig.cmake.in
@@ -2,8 +2,8 @@
 get_filename_component( CVARS_CMAKE_DIR "${CMAKE_CURRENT_LIST_FILE}" PATH )
 
 # Library dependencies (contains definitions for IMPORTED targets)
-if( NOT TARGET cvars AND NOT CVars_BINARY_DIR )
-  include( "${CVARS_CMAKE_DIR}/CVarsTargets.cmake" )
+if( NOT TARGET cvars AND NOT CVARS_BINARY_DIR )
+  include( "${CVARS_CMAKE_DIR}/CVARSTargets.cmake" )
 endif()
 
 set( CVARS_INCLUDE_DIRS "@EXPORT_LIB_INC_DIR@" )
