--- a/cmake_modules/PackageConfig.cmake.in
+++ b/cmake_modules/PackageConfig.cmake.in
@@ -1,17 +1,24 @@
-# This file is populated by install_package.cmake
-# install_package.cmake
+SET( @PACKAGE_PKG_NAME@_LIBRARIES  @PACKAGE_LINK_LIBS@ CACHE INTERNAL "@PACKAGE_PKG_NAME@ libraries" FORCE )
+SET( @PACKAGE_PKG_NAME@_INCLUDE_DIRS  @PACKAGE_INCLUDE_DIRS@ CACHE INTERNAL "@PACKAGE_PKG_NAME@ include directories" FORCE )
+SET( @PACKAGE_PKG_NAME@_LIBRARY_DIRS @PACKAGE_LINK_DIRS@ CACHE INTERNAL "@PACKAGE_PKG_NAME@ library directories" FORCE )
+
+mark_as_advanced( @PACKAGE_PKG_NAME@_LIBRARIES )
+mark_as_advanced( @PACKAGE_PKG_NAME@_LIBRARY_DIRS )
+mark_as_advanced( @PACKAGE_PKG_NAME@_INCLUDE_DIRS )
+
+
 
 # Compute paths
 get_filename_component( PACKAGE_CMAKE_DIR "${CMAKE_CURRENT_LIST_FILE}" PATH )
-SET( @PROJECT_NAME@_INCLUDE_DIRS "@PACKAGE_INCLUDE_DIRS@" )
-SET( @PROJECT_NAME@_INCLUDE_DIR  "@PACKAGE_INCLUDE_DIRS@" )
+
 
 # Library dependencies (contains definitions for IMPORTED targets)
-if(NOT TARGET "@PACKAGE_LIB_NAME@" AND NOT @PROJECT_NAME@_BINARY_DIR)
-  include( "${PACKAGE_CMAKE_DIR}/@PROJECT_NAME@Targets.cmake" )
+if(NOT TARGET "@PACKAGE_PKG_NAME@_LIBRARIES" AND NOT "@PACKAGE_PKG_NAME@_BINARY_DIR")
+    include( "${PACKAGE_CMAKE_DIR}/@PACKAGE_PKG_NAME@Targets.cmake" )
+    include( "${PACKAGE_CMAKE_DIR}/@PACKAGE_PKG_NAME@ConfigVersion.cmake" )
 endif()
 
-SET(@PROJECT_NAME@_LIBRARIES @PACKAGE_LINK_LIBS@)
-SET(@PROJECT_NAME@_LIBRARY @PACKAGE_LIBRARY@)
-SET(@PROJECT_NAME@_INCLUDE_DIRS @PACKAGE_INCLUDE_DIRS@)
-SET(@PROJECT_NAME@_LINK_DIRS @PACKAGE_LINK_DIRS@)
+#SET(@PACKAGE_PKG_NAME@_LIBRARIES @PACKAGE_LIBRARIES@)
+#SET(@PACKAGE_PKG_NAME@_LIBRARY @PACKAGE_LIBRARY@)
+#SET(@PACKAGE_PKG_NAME@_INCLUDE_DIRS @PACKAGE_INCLUDE_DIRS@)
+#SET(@PACKAGE_PKG_NAME@_LINK_DIRS @PACKAGE_LINK_DIRS@)
