fix path to constructed lib in exports (pt 2)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -91,14 +91,15 @@ install_package(
     LIB_NAME cvars
     VERSION ${VERSION}
     DESCRIPTION "Library for runtime variable editing for fast prototyping."
-    INSTALL_HEADER_DIRS ${CMAKE_CURRENT_BINARY_DIR}/include/CVars
+    INSTALL_HEADER_DIRS ${CMAKE_CURRENT_SOURCE_DIR}
                         ${CMAKE_CURRENT_SOURCE_DIR}/CVars
                         ${CMAKE_CURRENT_SOURCE_DIR}/GLConsole
                         ${CMAKE_CURRENT_SOURCE_DIR}/FLConsole
     #INSTALL_HEADERS CVars/CVarVersion.h CVars/cvars_tinyxml.h CVars/CVar.h
     #                CVars/CVarVectorIO.h CVars/CVarMapIO.h CVars/Timestamp.h
     #                CVars/Trie.h CVars/TrieNode.h
-    DESTINATION  ${CMAKE_INSTALL_PREFIX}
+    DESTINATION ${CMAKE_INSTALL_PREFIX}
+    #LINK_LIBS cvars
     )
 
 # make an uninstall target
