create glplatform.h to detect all GL related variables; use these headers

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required( VERSION 2.8 )
 
 # Be sure to change these with each update
 SET( VERSION_MAJOR 2 )
-SET( VERSION_MINOR 4 )
+SET( VERSION_MINOR 5 )
 SET( VERSION_PATCH 0 )
 SET( VERSION ${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH} )
 
@@ -11,11 +11,55 @@ project( CVars )
 # Add to module path, so we can find our cmake modules
 list( APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake_modules )
 include( install_package )
+include(SetPlatformVars)
 
-# Set version values in CVarVersion.h  (see CVarVersion.h.in)
-configure_file( src/CVarVersion.h.in ${CMAKE_CURRENT_BINARY_DIR}/include/CVars/CVarVersion.h IMMEDIATE )
+# Properly source GL headers.
+if(ANDROID OR IOS)
+    set(HAVE_GLES 1)
+    option(BUILD_FOR_GLES_2 "Build for OpenGL ES 2 instead of ES 1" ON )
+    if(BUILD_FOR_GLES_2)
+        set(HAVE_GLES_2 1)
+    endif()
+endif()
+
+if( ANDROID  )
+    # Android specific display code
+    list(APPEND HEADERS ${INCDIR}/display_android.h )
+    list(APPEND SOURCES ${SRCDIR}/display_android.cpp )
+
+    if(HAVE_GLES_2)
+        list(APPEND LINK_LIBS "-lEGL;-lGLESv2" )
+    else()
+        list(APPEND LINK_LIBS "-lEGL;-lGLESv1_CM" )
+    endif()
+elseif( IOS )
+    list(APPEND LINK_LIBS "-framework OpenGLES" )
+    list(APPEND IOS_HEADERS "${INCDIR}/ios/PangolinAppDelegate.h" "${INCDIR}/ios/PangolinViewController.h" )
+    list(APPEND SOURCES ${SRCDIR}/ios/PangolinAppDelegate.mm
+        ${SRCDIR}/ios/PangolinViewController.mm )
+else()
+    find_package(OpenGL REQUIRED QUIET)
+    list(APPEND USER_INC  "${OPENGL_INCLUDE_DIR}" )
+    list(APPEND LINK_LIBS "${OPENGL_LIBRARIES}" )
+
+    find_package(GLEW REQUIRED QUIET)
+    if(GLEW_FOUND)
+        list(APPEND USER_INC  "${GLEW_INCLUDE_DIR}" )
+        list(APPEND LINK_LIBS "${GLEW_LIBRARY}" )
+        set(HAVE_GLEW 1)
+    endif()
+endif()
+
+if( HAVE_GLES_2 )
+    # Add Pangolins backwards compat layer.
+    list(APPEND HEADERS ${INCDIR}/gl2engine.h )
+    list(APPEND SOURCES ${SRCDIR}/gl2engine.cpp)
+endif()
+
+
+# Set version values in config.h  (see config.h.in)
+configure_file( src/config.h.in ${CMAKE_CURRENT_BINARY_DIR}/include/CVars/config.h IMMEDIATE )
 include_directories( ${CMAKE_CURRENT_BINARY_DIR}/include )
-
 
 ###############################################################################
 # Setup compiler flags
@@ -32,9 +76,7 @@ ENDIF( NOT MSVC )
 
 ###############################################################################
 # Build CVars library
-IF(WIN32)
-	SET(WIN32 1)
-ENDIF(WIN32)
+
 include_directories( ${CMAKE_CURRENT_SOURCE_DIR}/include )
 set( CVAR_SRCS
     src/cvars_tinyxml.cpp
@@ -48,7 +90,7 @@ set( CVAR_SRCS
    )
 
 set( CVAR_HDRS
-    include/CVars/CVarVersion.h
+    include/CVars/config.h
     include/CVars/cvars_tinyxml.h
     include/CVars/CVar.h
     include/CVars/CVarVectorIO.h
@@ -59,7 +101,6 @@ set( CVAR_HDRS
   )
 
 add_definitions( -DTIXML_USE_STL )
-add_library( cvars ${CVAR_SRCS}) #${CVAR_HDRS} )
 
 ###############################################################################
 set( BUILD_GLCONSOLE_DEMO CACHE BOOL OFF )
@@ -83,6 +124,10 @@ set( FLCONSOLE_HEADERS
         include/FLConsole/FLConsoleFunction.h
    )
 
+# include CVAR_HDRS in add_library so QtCreator will detect them.
+add_library( cvars ${CVAR_SRCS} ${CVAR_HDRS} ${GLCONSOLE_HEADERS}
+ ${FLCONSOLE_HEADERS} )
+
 ##############################################################################
 install_package(
     PKG_NAME CVars
@@ -90,7 +135,7 @@ install_package(
     VERSION ${VERSION}
     DESCRIPTION "Library for runtime variable editing for fast prototyping."
     INSTALL_INCLUDE_DIR true
-    INSTALL_GENERATED_HEADERS ${CMAKE_CURRENT_BINARY_DIR}/include/CVars/CVarVersion.h
+    INSTALL_GENERATED_HEADERS ${CMAKE_CURRENT_BINARY_DIR}/include/CVars/config.h
     DESTINATION ${CMAKE_INSTALL_PREFIX}
     )
 
