CVars is now a dynamic library. This fixes a problem where the library is compiled multiple times and the cvars stop working.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,7 +59,7 @@ set( CVAR_HDRS
   )
 
 add_definitions( -DTIXML_USE_STL )
-add_library( cvars ${CVAR_SRCS}) #${CVAR_HDRS} )
+add_library( cvars SHARED ${CVAR_SRCS}) #${CVAR_HDRS} )
 
 ###############################################################################
 set( BUILD_GLCONSOLE_DEMO CACHE BOOL OFF )
