--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,7 +40,8 @@ if(_OSX_)
 endif(_OSX_)
 
 # Prefer OSX_MODIFIED_GLUT > FREEGLUT > GLUT
-if(FREEGLUT_FOUND AND NOT HAVE_MODIFIED_OSXGLUT)
+option(FORCE_FREEGLUT "Force use of freeglut if found." OFF)
+if(FREEGLUT_FOUND AND (NOT HAVE_MODIFIED_OSXGLUT OR FORCE_FREEGLUT))
   set(HAVE_FREEGLUT 1)
   list(APPEND USER_INC  ${FREEGLUT_INCLUDE_DIR} )
   list(APPEND LINK_LIBS ${FREEGLUT_LIBRARY} )
