removes fPIC flag

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -90,8 +90,8 @@ include_directories( ${CMAKE_CURRENT_BINARY_DIR}/include )
 ###############################################################################
 # Setup compiler flags
 IF( NOT MSVC )
-    SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIC")
-    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC")
+    SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} )
+    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
 
     # Setup strict debugging environment.
     IF( "${CMAKE_BUILD_TYPE}" STREQUAL "Debug" )
