--- a/debian/control
+++ b/debian/control
@@ -1,13 +1,16 @@
-Source: libcvars-dev
+Source: cvars
 Priority: optional
 Maintainer: Gabe Sibley <gabe.sibley@gmail.com>
 Build-Depends: debhelper (>= 9), cmake
 Standards-Version: 3.9.5
 Section: libs
-Homepage: 
+Homepage: http://github.com/arpg/cvars
 
 Package: libcvars-dev
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
-Description: insert up to 60 chars description
- insert long description, indented with spaces
+Description: CVars is a small C++ library that allows run-time tweaking of C++ variables.
+ Within CVars, GLConsole is an example that allows OpenGL developers to easily
+ add a 'Quake-style' debugging console to their applications.  GLConsole relies
+ on CVars.
+
