updates debian packaging files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -147,7 +147,7 @@ set( FLCONSOLE_HEADERS
 # include CVAR_HDRS in add_library so QtCreator will detect them.
 add_library( cvars SHARED ${CVAR_SRCS} ${CVAR_HDRS} ${GLCONSOLE_HEADERS}
  ${FLCONSOLE_HEADERS} )
-set_target_properties( cvars PROPERTIES VERSION ${VERSION} SOVERSION ${VERSION} )
+set_target_properties( cvars PROPERTIES VERSION "${VERSION}" SOVERSION "${VERSION}" )
 
 
 ##############################################################################
