TinyXML2 spelling fix in CMakeLists

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,8 +32,10 @@ find_package(FREEGLUT QUIET)
 find_package(GLUT QUIET)
 
 find_package(TinyXML2 REQUIRED)
-list(APPEND USER_INC  ${TINYXML2_INCLUDE_DIRS} )
-list(APPEND LINK_LIBS ${TINYXML2_LIBRARIES} )
+list(APPEND USER_INC  ${TinyXML2_INCLUDE_DIRS} )
+list(APPEND LINK_LIBS ${TinyXML2_LIBRARIES} )
+
+message(WARNING ${LINK_LIBS})
 
 
 
